--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,13 +1,17 @@
+---
+import "../styles/global.css";
+---
+
 <!doctype html>
-<html lang="en">
+<html lang="en" class="dark">
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width" />
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="generator" content={Astro.generator} />
-		<title>Astro Basics</title>
+		<title>Sampson's Home Page</title>
 	</head>
-	<body>
+	<body class="antialiased font-mono">
 		<slot />
 	</body>
 </html>
@@ -18,5 +22,6 @@
 		margin: 0;
 		width: 100%;
 		height: 100%;
+		scroll-behavior: smooth;
 	}
 </style>
