--- a/src/components/SiteMap.astro
+++ b/src/components/SiteMap.astro
@@ -72,7 +72,7 @@
       <div class="">
         <a
           class="underline text-gray600 hover:text-gray-800 dark:text-gray-400 dark:hover:text-gray-200 text-sm"
-          href="/terms"
+          href="/terms_of_services"
         >
           Terms of Services
         </a>
@@ -83,9 +83,9 @@
       <div class="">
         <a
           class="underline text-gray600 hover:text-gray-800 dark:text-gray-400 dark:hover:text-gray-200 text-sm"
-          href="/privacy"
+          href="/privacy_policy"
         >
-          Privacy Agreement
+          Privacy Policy
         </a>
       </div>
     </div>
