--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,5 +1,8 @@
 ---
+import Footer from "../components/Footer.astro";
+import SiteMap from "../components/SiteMap.astro";
 import "../styles/global.css";
+const { title } = Astro.props;
 ---
 
 <!doctype html>
@@ -9,7 +12,7 @@ import "../styles/global.css";
 		<meta name="viewport" content="width=device-width" />
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="generator" content={Astro.generator} />
-		<title>Sampson's Home Page</title>
+		<title>{title}</title>
 	</head>
 	<body class="antialiased font-mono">
 		<slot />
