Use line clamp instead of overlay

--- a/src/components/PostPreviewTile.astro
+++ b/src/components/PostPreviewTile.astro
@@ -27,13 +27,6 @@ const { title, description, previewImageUrl } = Astro.props;
     <h3 class="text-l font-bold text-gray-700 dark:text-gray-300">
       {title}
     </h3>
-
-    <div
-      class=`h-[160px] overflow-hidden relative
-        before:absolute before:bottom-0 before:left-0 before:right-0 before:h-8 before:bg-gradient-to-t before:from-white dark:before:from-zinc-900 before:to-transparent before:pointer-events-none
-      `
-    >
-      <p class="text-sm text-gray-700 dark:text-gray-300">{description}</p>
-    </div>
+    <p class="text-sm text-gray-700 dark:text-gray-300 line-clamp-6">{description}</p>
   </div>
 </div>
