Replace homepage with new design

--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -2,7 +2,7 @@
 ---
 
 <section
-    class="relative min-h-[80vh] flex flex-col items-center justify-center px-6 py-20 text-center"
+    class="relative min-h-[80vh] flex flex-col items-center justify-center px-6 py-20 text-center bg-black"
 >
     {/* Background radial gradient */}
     <div
