--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,6 +4,7 @@ import Header from "../components/Header.astro";
 import Hero from "../components/Hero.astro";
 import Experience from "../components/Experience.astro";
 import Projects from "../components/Projects";
+import Contact from "../components/Contact.astro";
 import Footer from "../components/Footer.astro";
 
 const pathname = Astro.url.pathname;
@@ -12,9 +13,10 @@ const searchParams = Astro.url.searchParams;
 ---
 
 <Layout title="Sampson's Home Page">
-  <Header pathname={pathname} client:visible />
+  <Header />
   <Hero />
   <Experience />
   <Projects />
+  <Contact />
   <Footer />
 </Layout>
