--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,11 +1,9 @@
 ---
-import React from 'react';
-
 export const NAV_LINKS = [
-  { name: 'Experience', href: '#experience' },
-  { name: 'Projects', href: '#projects' },
+  { name: 'Experience', href: '/#experience' },
+  { name: 'Projects', href: '/#projects' },
   { name: 'Blog', href: '/blog' },
-  { name: 'Contact', href: '#contact' },
+  { name: 'Contact', href: '/#contact' },
 ];
 ---
 
